[project]
name = "project-imara"
version = "1.0.0"
description = "Zero-UI Digital Bodyguard for African women facing online violence"
requires-python = ">=3.12"
dependencies = [
    "dj-database-url>=3.0.1",
    "django>=6.0.0",
    "google-genai>=1.52.0",
    "gunicorn>=23.0.0",
    "pydantic>=2.12.5",
    "whitenoise>=6.11.0",
    "pillow>=10.2.0",
    "litellm>=1.81.13",
    "httpx>=0.28.1",
    "uvicorn>=0.41.0",
    "django-tasks-scheduler>=4.0.8",
    "boto3>=1.42.53",
]
